asgn3/src/parser.out
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 114 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 119 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.
shift/reduce conflict in state 154 resolved as shift.


Unused terminals:

   COND_OP
   PROTECTED
   TRUE
   __HALT_COMPILER
   CONST_DECIMAL
   CONST_BINARY
   GOTO
   NAMESPACE
   __CLASS__
   __LINE__
   CALLABLE
   EXTENDS
   FOREACH
   ENDIF
   VAR
   DECLARE
   TRAIT
   ISSET
   INSTEADOF
   ACCESS_OP
   CONST_OCTAL
   INTERFACE
   OR
   RETURN
   STATIC
   FINAL
   ENDFOREACH
   CONST_DOUBLE
   ENDSWITCH
   COND_COLON
   FUNCTION
   FOR
   ECHO
   TRY
   ELSEIF
   ENDWHILE
   ENDDECLARE
   CONTINUE
   DEFAULT
   GLOBAL
   ELSE
   WHILE
   NEW
   END_TAG
   CASE
   EXPONENT
   START_TAG
   SWITCH
   ENDFOR
   CATCH
   __METHOD__
   IMPLEMENTS
   FALSE
   CONST_STRING
   BREAK
   PUBLIC
   DO
   USE
   CONST
   DIE
   ABSTRACT
   NULL
   UNSET
   CONST_HEX
   PRIVATE
   CLASS
   __DIR__
   XOR
   __FILE__
   AS
   IF
   __FUNCTION__
   __TRAIT__
   __NAMESPACE__
   THROW

Grammar

Rule 1     start -> top_statement_list
Rule 2     top_statement_list -> top_statement_list top_statement
Rule 3     top_statement_list -> empty
Rule 4     top_statement -> statement
Rule 5     statement -> expr SEMICOLON
Rule 6     expr -> variable
Rule 7     variable -> base_variable_with_function_calls
Rule 8     base_variable_with_function_calls -> base_variable
Rule 9     base_variable -> simple_indirect_reference
Rule 10    simple_indirect_reference -> reference_variable
Rule 11    reference_variable -> reference_variable LBRACKET dim_offset RBRACKET
Rule 12    reference_variable -> reference_variable LBRACE expr RBRACE
Rule 13    reference_variable -> compound_variable
Rule 14    compound_variable -> IDENTIFIER
Rule 15    dim_offset -> expr
Rule 16    dim_offset -> empty
Rule 17    expr -> variable EQUAL expr
Rule 18    expr -> variable EQUAL BIT_AND expr
Rule 19    expr -> CLONE expr
Rule 20    expr -> LIST LPAREN assignment_list RPAREN EQUAL expr
Rule 21    assignment_list -> assignment_list COMMA assignment_list_element
Rule 22    assignment_list -> assignment_list_element
Rule 23    assignment_list_element -> variable
Rule 24    assignment_list_element -> empty
Rule 25    assignment_list_element -> LIST LPAREN assignment_list RPAREN
Rule 26    expr -> ARRAY LPAREN array_pair_list RPAREN
Rule 27    array_pair_list -> empty
Rule 28    array_pair_list -> non_empty_array_pair_list possible_comma
Rule 29    non_empty_array_pair_list -> non_empty_array_pair_list COMMA BIT_AND variable
Rule 30    non_empty_array_pair_list -> non_empty_array_pair_list COMMA expr
Rule 31    non_empty_array_pair_list -> BIT_AND variable
Rule 32    non_empty_array_pair_list -> expr
Rule 33    possible_comma -> empty
Rule 34    possible_comma -> COMMA
Rule 35    expr -> variable PLUS_EQ expr
Rule 36    expr -> variable MINUS_EQ expr
Rule 37    expr -> variable MULTIPLY_EQ expr
Rule 38    expr -> variable DIVIDE_EQ expr
Rule 39    expr -> variable DOT_EQ expr
Rule 40    expr -> variable MOD_EQ expr
Rule 41    expr -> expr AND_OP expr
Rule 42    expr -> expr OR_OP expr
Rule 43    expr -> expr AND expr
Rule 44    expr -> expr BIT_OR expr
Rule 45    expr -> expr BIT_XOR expr
Rule 46    expr -> expr DOT expr
Rule 47    expr -> expr PLUS expr
Rule 48    expr -> expr MINUS expr
Rule 49    expr -> expr MULT expr
Rule 50    expr -> expr DIV expr
Rule 51    expr -> expr BIT_LSHIFT expr
Rule 52    expr -> expr BIT_RSHIFT expr
Rule 53    expr -> expr MOD expr
Rule 54    expr -> expr IDENTICAL expr
Rule 55    expr -> expr NOT_IDENTICAL expr
Rule 56    expr -> expr EQ_EQ expr
Rule 57    expr -> expr NOT_EQ expr
Rule 58    expr -> expr LESSER expr
Rule 59    expr -> expr LESSER_EQ expr
Rule 60    expr -> expr GREATER expr
Rule 61    expr -> expr GREATER_EQ expr
Rule 62    expr -> expr INSTANCEOF expr
Rule 63    expr -> PLUS expr
Rule 64    expr -> MINUS expr
Rule 65    expr -> BIT_NOT expr
Rule 66    expr -> NOT expr
Rule 67    expr -> INC variable
Rule 68    expr -> DEC variable
Rule 69    expr -> variable INC
Rule 70    expr -> variable DEC
Rule 71    expr -> EMPTY LPAREN expr RPAREN
Rule 72    expr -> EVAL LPAREN expr RPAREN
Rule 73    expr -> LPAREN expr RPAREN
Rule 74    expr -> INCLUDE expr
Rule 75    expr -> INCLUDE_ONCE expr
Rule 76    expr -> REQUIRE expr
Rule 77    expr -> REQUIRE_ONCE expr
Rule 78    expr -> EXIT
Rule 79    expr -> EXIT LPAREN RPAREN
Rule 80    expr -> EXIT LPAREN expr RPAREN
Rule 81    expr -> PRINT expr
Rule 82    empty -> <empty>

Terminals, with rules where they appear

ABSTRACT             : 
ACCESS_OP            : 
AND                  : 43
AND_OP               : 41
ARRAY                : 26
AS                   : 
BIT_AND              : 18 29 31
BIT_LSHIFT           : 51
BIT_NOT              : 65
BIT_OR               : 44
BIT_RSHIFT           : 52
BIT_XOR              : 45
BREAK                : 
CALLABLE             : 
CASE                 : 
CATCH                : 
CLASS                : 
CLONE                : 19
COMMA                : 21 29 30 34
COND_COLON           : 
COND_OP              : 
CONST                : 
CONST_BINARY         : 
CONST_DECIMAL        : 
CONST_DOUBLE         : 
CONST_HEX            : 
CONST_OCTAL          : 
CONST_STRING         : 
CONTINUE             : 
DEC                  : 68 70
DECLARE              : 
DEFAULT              : 
DIE                  : 
DIV                  : 50
DIVIDE_EQ            : 38
DO                   : 
DOT                  : 46
DOT_EQ               : 39
ECHO                 : 
ELSE                 : 
ELSEIF               : 
EMPTY                : 71
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
END_TAG              : 
EQUAL                : 17 18 20
EQ_EQ                : 56
EVAL                 : 72
EXIT                 : 78 79 80
EXPONENT             : 
EXTENDS              : 
FALSE                : 
FINAL                : 
FOR                  : 
FOREACH              : 
FUNCTION             : 
GLOBAL               : 
GOTO                 : 
GREATER              : 60
GREATER_EQ           : 61
IDENTICAL            : 54
IDENTIFIER           : 14
IF                   : 
IMPLEMENTS           : 
INC                  : 67 69
INCLUDE              : 74
INCLUDE_ONCE         : 75
INSTANCEOF           : 62
INSTEADOF            : 
INTERFACE            : 
ISSET                : 
LBRACE               : 12
LBRACKET             : 11
LESSER               : 58
LESSER_EQ            : 59
LIST                 : 20 25
LPAREN               : 20 25 26 71 72 73 79 80
MINUS                : 48 64
MINUS_EQ             : 36
MOD                  : 53
MOD_EQ               : 40
MULT                 : 49
MULTIPLY_EQ          : 37
NAMESPACE            : 
NEW                  : 
NOT                  : 66
NOT_EQ               : 57
NOT_IDENTICAL        : 55
NULL                 : 
OR                   : 
OR_OP                : 42
PLUS                 : 47 63
PLUS_EQ              : 35
PRINT                : 81
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
RBRACE               : 12
RBRACKET             : 11
REQUIRE              : 76
REQUIRE_ONCE         : 77
RETURN               : 
RPAREN               : 20 25 26 71 72 73 79 80
SEMICOLON            : 5
START_TAG            : 
STATIC               : 
SWITCH               : 
THROW                : 
TRAIT                : 
TRUE                 : 
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
WHILE                : 
XOR                  : 
__CLASS__            : 
__DIR__              : 
__FILE__             : 
__FUNCTION__         : 
__HALT_COMPILER      : 
__LINE__             : 
__METHOD__           : 
__NAMESPACE__        : 
__TRAIT__            : 
error                : 

Nonterminals, with rules where they appear

array_pair_list      : 26
assignment_list      : 20 21 25
assignment_list_element : 21 22
base_variable        : 8
base_variable_with_function_calls : 7
compound_variable    : 13
dim_offset           : 11
empty                : 3 16 24 27 33
expr                 : 5 12 15 17 18 19 20 30 32 35 36 37 38 39 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 64 65 66 71 72 73 74 75 76 77 80 81
non_empty_array_pair_list : 28 29 30
possible_comma       : 28
reference_variable   : 10 11 12
simple_indirect_reference : 9
start                : 0
statement            : 4
top_statement        : 2
top_statement_list   : 1 2
variable             : 6 17 18 23 29 31 35 36 37 38 39 40 67 68 69 70


Parsing method: LALR


state 0

    (0) S' -> . start
    (1) start -> . top_statement_list
    (2) top_statement_list -> . top_statement_list top_statement
    (3) top_statement_list -> . empty
    (82) empty -> .

    CLONE           reduce using rule 82 (empty -> .)
    LIST            reduce using rule 82 (empty -> .)
    ARRAY           reduce using rule 82 (empty -> .)
    PLUS            reduce using rule 82 (empty -> .)
    MINUS           reduce using rule 82 (empty -> .)
    BIT_NOT         reduce using rule 82 (empty -> .)
    NOT             reduce using rule 82 (empty -> .)
    INC             reduce using rule 82 (empty -> .)
    DEC             reduce using rule 82 (empty -> .)
    EMPTY           reduce using rule 82 (empty -> .)
    EVAL            reduce using rule 82 (empty -> .)
    LPAREN          reduce using rule 82 (empty -> .)
    INCLUDE         reduce using rule 82 (empty -> .)
    INCLUDE_ONCE    reduce using rule 82 (empty -> .)
    REQUIRE         reduce using rule 82 (empty -> .)
    REQUIRE_ONCE    reduce using rule 82 (empty -> .)
    EXIT            reduce using rule 82 (empty -> .)
    PRINT           reduce using rule 82 (empty -> .)
    IDENTIFIER      reduce using rule 82 (empty -> .)
    $end            reduce using rule 82 (empty -> .)


    top_statement_list             shift and go to state 1
    start                          shift and go to state 2
    empty                          shift and go to state 3

state 1

    (1) start -> top_statement_list .
    (2) top_statement_list -> top_statement_list . top_statement
    (4) top_statement -> . statement
    (5) statement -> . expr SEMICOLON
    (6) expr -> . variable
    (17) expr -> . variable EQUAL expr
    (18) expr -> . variable EQUAL BIT_AND expr
    (19) expr -> . CLONE expr
    (20) expr -> . LIST LPAREN assignment_list RPAREN EQUAL expr
    (26) expr -> . ARRAY LPAREN array_pair_list RPAREN
    (35) expr -> . variable PLUS_EQ expr
    (36) expr -> . variable MINUS_EQ expr
    (37) expr -> . variable MULTIPLY_EQ expr
    (38) expr -> . variable DIVIDE_EQ expr
    (39) expr -> . variable DOT_EQ expr
    (40) expr -> . variable MOD_EQ expr
    (41) expr -> . expr AND_OP expr
    (42) expr -> . expr OR_OP expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr BIT_OR expr
    (45) expr -> . expr BIT_XOR expr
    (46) expr -> . expr DOT expr
    (47) expr -> . expr PLUS expr
    (48) expr -> . expr MINUS expr
    (49) expr -> . expr MULT expr
    (50) expr -> . expr DIV expr
    (51) expr -> . expr BIT_LSHIFT expr
    (52) expr -> . expr BIT_RSHIFT expr
    (53) expr -> . expr MOD expr
    (54) expr -> . expr IDENTICAL expr
    (55) expr -> . expr NOT_IDENTICAL expr
    (56) expr -> . expr EQ_EQ expr
    (57) expr -> . expr NOT_EQ expr
    (58) expr -> . expr LESSER expr
    (59) expr -> . expr LESSER_EQ expr
    (60) expr -> . expr GREATER expr
    (61) expr -> . expr GREATER_EQ expr
    (62) expr -> . expr INSTANCEOF expr
    (63) expr -> . PLUS expr
    (64) expr -> . MINUS expr
    (65) expr -> . BIT_NOT expr
    (66) expr -> . NOT expr
    (67) expr -> . INC variable
    (68) expr -> . DEC variable
    (69) expr -> . variable INC
    (70) expr -> . variable DEC
    (71) expr -> . EMPTY LPAREN expr RPAREN
    (72) expr -> . EVAL LPAREN expr RPAREN
    (73) expr -> . LPAREN expr RPAREN
    (74) expr -> . INCLUDE expr
    (75) expr -> . INCLUDE_ONCE expr
    (76) expr -> . REQUIRE expr
    (77) expr -> . REQUIRE_ONCE expr
    (78) expr -> . EXIT
    (79) expr -> . EXIT LPAREN RPAREN
    (80) expr -> . EXIT LPAREN expr RPAREN
    (81) expr -> . PRINT expr
    (7) variable -> . base_variable_with_function_calls
    (8) base_variable_with_function_calls -> . base_variable
    (9) base_variable -> . simple_indirect_reference
    (10) simple_indirect_reference -> . reference_variable
    (11) reference_variable -> . reference_variable LBRACKET dim_offset RBRACKET
    (12) reference_variable -> . reference_variable LBRACE expr RBRACE
    (13) reference_variable -> . compound_variable
    (14) compound_variable -> . IDENTIFIER

    $end            reduce using rule 1 (start -> top_statement_list .)
    CLONE           shift and go to state 26
    LIST            shift and go to state 27
    ARRAY           shift and go to state 15
    PLUS            shift and go to state 12
    MINUS           shift and go to state 9
    BIT_NOT         shift and go to state 5
    NOT             shift and go to state 29
    INC             shift and go to state 30
    DEC             shift and go to state 8
    EMPTY           shift and go to state 18
    EVAL            shift and go to state 4
    LPAREN          shift and go to state 20
    INCLUDE         shift and go to state 10
    INCLUDE_ONCE    shift and go to state 23
    REQUIRE         shift and go to state 17
    REQUIRE_ONCE    shift and go to state 22
    EXIT            shift and go to state 28
    PRINT           shift and go to state 7
    IDENTIFIER      shift and go to state 16


    simple_indirect_reference      shift and go to state 14
    base_variable                  shift and go to state 19
    compound_variable              shift and go to state 24
    expr                           shift and go to state 25
    variable                       shift and go to state 21
    base_variable_with_function_calls shift and go to state 11
    statement                      shift and go to state 13
    reference_variable             shift and go to state 6
    top_statement                  shift and go to state 31

state 2

    (0) S' -> start .




state 3

    (3) top_statement_list -> empty .

    CLONE           reduce using rule 3 (top_statement_list -> empty .)
    LIST            reduce using rule 3 (top_statement_list -> empty .)
    ARRAY           reduce using rule 3 (top_statement_list -> empty .)
    PLUS            reduce using rule 3 (top_statement_list -> empty .)
    MINUS           reduce using rule 3 (top_statement_list -> empty .)
    BIT_NOT         reduce using rule 3 (top_statement_list -> empty .)
    NOT             reduce using rule 3 (top_statement_list -> empty .)
    INC             reduce using rule 3 (top_statement_list -> empty .)
    DEC             reduce using rule 3 (top_statement_list -> empty .)
    EMPTY           reduce using rule 3 (top_statement_list -> empty .)
    EVAL            reduce using rule 3 (top_statement_list -> empty .)
    LPAREN          reduce using rule 3 (top_statement_list -> empty .)
    INCLUDE         reduce using rule 3 (top_statement_list -> empty .)
    INCLUDE_ONCE    reduce using rule 3 (top_statement_list -> empty .)
    REQUIRE         reduce using rule 3 (top_statement_list -> empty .)
    REQUIRE_ONCE    reduce using rule 3 (top_statement_list -> empty .)
    EXIT            reduce using rule 3 (top_statement_list -> empty .)
    PRINT           reduce using rule 3 (top_statement_list -> empty .)
    IDENTIFIER      reduce using rule 3 (top_statement_list -> empty .)
    $end            reduce using rule 3 (top_statement_list -> empty .)



state 4

    (72) expr -> EVAL . LPAREN expr RPAREN

    LPAREN          shift and go to state 32



state 5

    (65) expr -> BIT_NOT . expr
    (6) expr -> . variable
    (17) expr -> . variable EQUAL expr
    (18) expr -> . variable EQUAL BIT_AND expr
    (19) expr -> . CLONE expr
    (20) expr -> . LIST LPAREN assignment_list RPAREN EQUAL expr
    (26) expr -> . ARRAY LPAREN array_pair_list RPAREN
    (35) expr -> . variable PLUS_EQ expr
    (36) expr -> . variable MINUS_EQ expr
    (37) expr -> . variable MULTIPLY_EQ expr
    (38) expr -> . variable DIVIDE_EQ expr
    (39) expr -> . variable DOT_EQ expr
    (40) expr -> . variable MOD_EQ expr
    (41) expr -> . expr AND_OP expr
    (42) expr -> . expr OR_OP expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr BIT_OR expr
    (45) expr -> . expr BIT_XOR expr
    (46) expr -> . expr DOT expr
    (47) expr -> . expr PLUS expr
    (48) expr -> . expr MINUS expr
    (49) expr -> . expr MULT expr
    (50) expr -> . expr DIV expr
    (51) expr -> . expr BIT_LSHIFT expr
    (52) expr -> . expr BIT_RSHIFT expr
    (53) expr -> . expr MOD expr
    (54) expr -> . expr IDENTICAL expr
    (55) expr -> . expr NOT_IDENTICAL expr
    (56) expr -> . expr EQ_EQ expr
    (57) expr -> . expr NOT_EQ expr
    (58) expr -> . expr LESSER expr
    (59) expr -> . expr LESSER_EQ expr
    (60) expr -> . expr GREATER expr
    (61) expr -> . expr GREATER_EQ expr
    (62) expr -> . expr INSTANCEOF expr
    (63) expr -> . PLUS expr
    (64) expr -> . MINUS expr
    (65) expr -> . BIT_NOT expr
    (66) expr -> . NOT expr
    (67) expr -> . INC variable
    (68) expr -> . DEC variable
    (69) expr -> . variable INC
    (70) expr -> . variable DEC
    (71) expr -> . EMPTY LPAREN expr RPAREN
    (72) expr -> . EVAL LPAREN expr RPAREN
    (73) expr -> . LPAREN expr RPAREN
    (74) expr -> . INCLUDE expr
    (75) expr -> . INCLUDE_ONCE expr
    (76) expr -> . REQUIRE expr
    (77) expr -> . REQUIRE_ONCE expr
    (78) expr -> . EXIT
    (79) expr -> . EXIT LPAREN RPAREN
    (80) expr -> . EXIT LPAREN expr RPAREN
    (81) expr -> . PRINT expr
    (7) variable -> . base_variable_with_function_calls
    (8) base_variable_with_function_calls -> . base_variable
    (9) base_variable -> . simple_indirect_reference
    (10) simple_indirect_reference -> . reference_variable
    (11) reference_variable -> . reference_variable LBRACKET dim_offset RBRACKET
    (12) reference_variable -> . reference_variable LBRACE expr RBRACE
    (13) reference_variable -> . compound_variable
    (14) compound_variable -> . IDENTIFIER

    CLONE           shift and go to state 26
    LIST            shift and go to state 27
    ARRAY           shift and go to state 15
    PLUS            shift and go to state 12
    MINUS           shift and go to state 9
    BIT_NOT         shift and go to state 5
    NOT             shift and go to state 29
    INC             shift and go to state 30
    DEC             shift and go to state 8
    EMPTY           shift and go to state 18
    EVAL            shift and go to state 4
    LPAREN          shift and go to state 20
    INCLUDE         shift and go to state 10
    INCLUDE_ONCE    shift and go to state 23
    REQUIRE         shift and go to state 17
    REQUIRE_ONCE    shift and go to state 22
    EXIT            shift and go to state 28
    PRINT           shift and go to state 7
    IDENTIFIER      shift and go to state 16


    base_variable                  shift and go to state 19
    compound_variable              shift and go to state 24
    expr                           shift and go to state 33
    simple_indirect_reference      shift and go to state 14
    base_variable_with_function_calls shift and go to state 11
    reference_variable             shift and go to state 6
    variable                       shift and go to state 21

state 6

    (10) simple_indirect_reference -> reference_variable .
    (11) reference_variable -> reference_variable . LBRACKET dim_offset RBRACKET
    (12) reference_variable -> reference_variable . LBRACE expr RBRACE

    EQUAL           reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    PLUS_EQ         reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    MINUS_EQ        reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    MULTIPLY_EQ     reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    DIVIDE_EQ       reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    DOT_EQ          reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    MOD_EQ          reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    INC             reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    DEC             reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    SEMICOLON       reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    AND_OP          reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    OR_OP           reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    AND             reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    BIT_OR          reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    BIT_XOR         reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    DOT             reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    PLUS            reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    MINUS           reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    MULT            reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    DIV             reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    BIT_LSHIFT      reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    BIT_RSHIFT      reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    MOD             reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    IDENTICAL       reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    NOT_IDENTICAL   reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    EQ_EQ           reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    NOT_EQ          reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    LESSER          reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    LESSER_EQ       reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    GREATER         reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    GREATER_EQ      reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    INSTANCEOF      reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    RPAREN          reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    RBRACE          reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    RBRACKET        reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    COMMA           reduce using rule 10 (simple_indirect_reference -> reference_variable .)
    LBRACKET        shift and go to state 35
    LBRACE          shift and go to state 34



state 7

    (81) expr -> PRINT . expr
    (6) expr -> . variable
    (17) expr -> . variable EQUAL expr
    (18) expr -> . variable EQUAL BIT_AND expr
    (19) expr -> . CLONE expr
    (20) expr -> . LIST LPAREN assignment_list RPAREN EQUAL expr
    (26) expr -> . ARRAY LPAREN array_pair_list RPAREN
    (35) expr -> . variable PLUS_EQ expr
    (36) expr -> . variable MINUS_EQ expr
    (37) expr -> . variable MULTIPLY_EQ expr
    (38) expr -> . variable DIVIDE_EQ expr
    (39) expr -> . variable DOT_EQ expr
    (40) expr -> . variable MOD_EQ expr
    (41) expr -> . expr AND_OP expr
    (42) expr -> . expr OR_OP expr
    (43) expr -> . expr AND expr
    (44) expr -> . expr BIT_OR expr
    (45) expr -> . expr BIT_XOR expr
    (46) expr -> . expr DOT expr
    (47) expr -> . expr PLUS expr
    (48) expr -> . expr MINUS expr
    (49) expr -> . expr MULT expr
    (50) expr -> . expr DIV expr
    (51) expr -> . expr BIT_LSHIFT expr
    (52) expr -> . expr BIT_RSHIFT expr
    (53) expr -> . expr MOD expr
    (54) expr -> . expr IDENTICAL expr
    (55) expr -> . expr NOT_IDENTICAL expr
    (56) expr -> . expr EQ_EQ expr
    (57) expr -> . expr NOT_EQ expr
    (58) expr -> . expr LESSER expr
    (59) expr -> . expr LESSER_EQ expr
    (60) expr -> . expr GREATER expr
    (61) expr -> . expr GREATER_EQ expr
    (62) expr -> . expr INSTANCEOF expr
    (63) expr -> . PLUS expr
    (64) expr -> . MINUS expr
    (65) expr -> . BIT_NOT expr
    (66) expr -> . NOT expr
    (67) expr -> . INC variable
    (68) expr -> . DEC variable
    (69) expr -> . variable INC
    (70) expr -> . variable DEC
    (71) expr -> . EMPTY LPAREN expr RPAREN
    (72) expr -> . EVAL LPAREN expr RPAREN
    (73) expr -> . LPAREN expr RPAREN
    (74) expr -> . INCLUDE expr
    (75) expr -> . INCLUDE_ONCE expr
    (76) expr -> . REQUIRE expr
    (77) expr -> . REQUIRE_ONCE expr
    (78) expr -> . EXIT
    (79) expr -> . EXIT LPAREN RPAREN
    (80) expr -> . EXIT LPAREN expr RPAREN
    (81) expr -> . PRINT expr
    (7) variable -> . base_variable_with_function_calls
    (8) base_variable_with_function_calls -> . base_variable
    (9) base_variable -> . simple_indirect_reference
    (10) simple_indirect_reference -> . reference_variable
    (11) reference_variable -> . reference_variable LBRACKET dim_offset RBRACKET
    (12) reference_variable -> . reference_variable LBRACE expr RBRACE
    (13) reference_variable -> . compound_variable
    (14) compound_variable -> . IDENTIFIER

    CLONE           shift and go to state 26
    LIST            shift and go to state 27
    ARRAY           shift and go to state 15
    PLUS            shift and go to state 12
    MINUS           shift and go to state 9
    BIT_NOT         shift and go to state 5
    NOT             shift and go to state 29
    INC             shift and go to state 30
    DEC             shift and go to state 8
    EMPTY           shift and go to state 18
    EVAL            shift and go to state 4
    LPAREN          shift and go to state 20
    INCLUDE         shift and go to state 10
    INCLUDE_ONCE    shift and go to state 23
    REQUIRE         shift and go to state 17
    REQUIRE_ONCE    shift and go to state 22
    EXIT            shift and go to state 28
    PRINT           shift and go to state 7
    IDENTIFIER      shift and go to state 16


    base_variable                  shift and go to state 19
    compound_variable              shift and go to state 24
    expr                           shift and go to state 36
    simple_indirect_reference      shift and go to state 14
    base_variable_with_function_calls shift and go to state 11
    reference_variable             shift and go to state 6
    variable                       shift and go to state 21

state 8

    (68) expr -> DEC . variable
    (7) variable -> . base_variable_with_function_calls
    (8) base_variable_with_function_calls -> . base_variable
    (9) base_variable -> . simple_indirect_reference
    (10) simple_indirect_reference -> . reference_variable
    (11) reference_variable -> . reference_variable LBRACKET dim_offset RBRACKET
    (12) reference_variable -> . reference_variable LBRACE expr RBRACE
    (13) reference_variable -> . compound_variable
    (14) compound_variable -> . IDENTIFIER

    IDENTIFIER      shift and go to state 16


    base_variable                  shift and go to state 19
    compound_variable              shift and go to state 24
    simple_indirect_reference      shift and go to state 14
    base_variable_with_function_calls shift and go to state 11
    reference_variable             shift and go to state 6
    variable                       shift and go to state 37

state 9
